[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32L1 series microcontrollers"
documentation = "https://docs.rs/stm32l1xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32l1xx",
    "hal",
]
license = "MIT/Apache-2.0"
name = "stm32l1xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32l1xx-hal"
version = "0.0.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
nb = "0.1.1"

[dependencies.bare-metal]
features = ["const-fn"]
version = "0.2.4"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.stm32l1]
version = "0.4.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m-rtfm = "0.4.0-beta.3"

[features]
default = [
    "stm32l100",
    "rt",
]
rt = ["stm32l1/rt"]
stm32l100 = ["stm32l1/stm32l100"]
stm32l151 = ["stm32l1/stm32l151"]
stm32l152 = ["stm32l1/stm32l151"]
stm32l162 = ["stm32l1/stm32l162"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
