[package]
edition = "2018"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32L1 series microcontrollers"
documentation = "https://docs.rs/stm32l1xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32l1xx",
    "hal",
]
license = "MIT/Apache-2.0"
name = "stm32l1xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32l1xx-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
nb = "1"
stm32l1 = "0.15.1"
bare-metal = { version = "1" }
embedded-hal = { features = ["unproven"], version = "0.2.7" }
void = { default-features = false, version = "1.0.2" }
cast = { default-features = false, version = "0.3.0" }

[dev-dependencies]
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
cortex-m-rtic = "1.1.3"

[features]
rt = ["stm32l1/rt"]
stm32l100 = ["stm32l1/stm32l100"]
stm32l151 = ["stm32l1/stm32l151"]
stm32l152 = ["stm32l1/stm32l151"]
stm32l162 = ["stm32l1/stm32l162"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "button_irq"
required-features = ["rt"]

[[example]]
name = "timer"
required-features = ["rt"]
